fix: Update .gitignore to allow gradle wrapper jar while excluding other jars

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,20 @@
 build/
 /bin/
 bin/
-!gradle/wrapper/gradle-wrapper.jar
 
 # --- [ Java / IDEs ] ---
 *.class
 *.log
-*.jar
 *.war
 *.zip
 .project
 .classpath
 .settings/
 .factorypath
+
+# Exception for gradle wrapper jar
+!gradle/wrapper/gradle-wrapper.jar
+*.jar
 
 # IntelliJ IDEA
 .idea/
